# glint

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: release-drafter.yml
.github/workflows/: build-release.yml  check.yml  release.yml
examples/: figlet-demo.rs  log-key-event.rs  term-buffer-triangle.rs
scripts/: build-release
src/: big-minimal.flf  cli.rs  color.rs  commands.rs  commitlint.rs  config.rs  figlet.rs  git.rs  lib.rs  main.rs  prompt.rs  string.rs  term_buffer.rs
src/commands/: commit.rs  log.rs
src/git/: parse_log.rs
src/prompt/: files_prompt.rs  message_prompt.rs  scope_prompt.rs  type_prompt.rs
