[package]
authors = ["Frankie Bagnardi <f.bagnardi@gmail.com>"]
edition = "2018"
name = "glint"
version = "0.1.3"
description = "a friendly tool for creating commits in the commitlint style"
homepage="https://github.com/brigand/glint"
repository="https://github.com/brigand/glint"
docs="https://docs.rs/glint"
license = "MIT"

[dependencies]
clap = "2"
crossterm = "0.10"
unic-segment = "0.9"

[profile.release]
lto = true
debug = false
opt-level = 3
