[package]
authors = ["Frankie Bagnardi <f.bagnardi@gmail.com>"]
edition = "2018"
name = "glint"
version = "0.4.0"
description = "a friendly tool for creating commits in the commitlint style"
homepage="https://github.com/brigand/glint"
repository="https://github.com/brigand/glint"
documentation="https://docs.rs/glint"
license = "MIT"

[dependencies]
crossterm = "0.17.7"
unic-segment = "0.9.0"
structopt = "0.3.15"
# Considering using this for `git diff`
# cursive-multiplex = "^0.2.0"

[profile.release]
lto = true
debug = false
opt-level = 3
